--- a/index.html
+++ b/index.html
@@ -12,12 +12,40 @@
     <div class="container">
         <div class="header">
             <h1>Library</h1>
-            <button>Log in</button>
         </div>
+        <div class="add-book-input">
+            <form action="">
+
+                <div class="title">
+                    <label for="title">Title</label>
+                    <input type="text" id="title-input">
+                </div>
+
+                <div class="author">
+                    <label for="author">Author</label>
+                    <input type="text" id="author-input">
+                </div>
+
+                <div class="pages">
+                    <label for="pages">Pages</label>
+                    <input type="number" id="pages-input">
+                </div>
+
+                <div class="status">
+                    <label for="status">Status</label>
+                    <select name="status" id="status-input">
+                        <option value="read">Read</option>
+                        <option value="not-read">Not read</option>
+                    </select>
+                </div>
+
+                <button>Submit</button>
+            </form>
+
+        </div>
+
+
         <div class="content">
-            <div class="content-header">
-                <button>+ Add book</button>
-            </div>
             <div class="books">
 
             </div>
