added styles. Added js to create new book card. Bug clears myLibrary and book cards after execution.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="header">
             <h1>Library</h1>
         </div>
-        <div class="add-book-input">
-            <form action="">
+        <div class="book-form-section">
+            <form action="" class="book-form">
 
                 <div class="title">
                     <label for="title">Title</label>
@@ -31,9 +31,9 @@
                     <input type="number" id="pages-input">
                 </div>
 
-                <div class="status">
-                    <label for="status">Status</label>
-                    <select name="status" id="status-input">
+                <div class="read">
+                    <label for="read">Read</label>
+                    <select name="read" id="read-input">
                         <option value="read">Read</option>
                         <option value="not-read">Not read</option>
                     </select>
@@ -47,7 +47,7 @@
 
         <div class="content">
             <div class="books">
-
+                
             </div>
         </div>
     </div>
