--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
         <div class="header">
             <h1>Library</h1>
         </div>
-        <div class="add-book-input">
-            <form action="">
+        
+            <form action="" class="book-input">
 
-                <div class="title">
+                <div class="input-section">
                     <label for="title">Title</label>
-                    <input type="text" id="title-input">
+                    <input type="text" id="title-input" placeholder="Title">
                 </div>
 
-                <div class="author">
+                <div class="input-section">
                     <label for="author">Author</label>
-                    <input type="text" id="author-input">
+                    <input type="text" id="author-input" placeholder="Author">
                 </div>
 
-                <div class="pages">
+                <div class="input-section">
                     <label for="pages">Pages</label>
-                    <input type="number" id="pages-input">
+                    <input type="number" id="pages-input" placeholder="Pages">
                 </div>
 
-                <div class="status">
-                    <label for="status">Status</label>
+                <div class="input-section">
+                    <label for="status">Read</label>
                     <select name="status" id="status-input">
                         <option value="read">Read</option>
                         <option value="not-read">Not read</option>
@@ -42,7 +42,6 @@
                 <button>Submit</button>
             </form>
 
-        </div>
 
 
         <div class="content">
