added styling to table

--- a/index.html
+++ b/index.html
@@ -45,10 +45,32 @@
 
 
         <div class="content">
-            <div class="books">
 
+            <div class="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Author</th>
+                            <th>Pages</th>
+                            <th>Read</th>
+                            <th>Delete</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <td>Title</td>
+                        <td>author</td>
+                        <td>pages</td>
+                        <td><button>read</button></td>
+                        <td><button>delete</button></td>
+                    </tbody>
+    
+                </table>
             </div>
+
+
         </div>
+
     </div>
 </body>
 </html>
