--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 </div>
 
                 <div class="input-section">
-                    <label for="status">Read</label>
-                    <select name="status" id="status-input">
+                    <label for="read">Read</label>
+                    <select name="read" id="read-input">
                         <option value="read">Read</option>
                         <option value="not-read">Not read</option>
                     </select>
                 </div>
 
-                <button>Submit</button>
+                <button id="submit-btn">Submit</button>
             </form>
 
 
@@ -58,13 +58,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <td>Title</td>
-                        <td>author</td>
-                        <td>pages</td>
-                        <td><button>read</button></td>
-                        <td><button>delete</button></td>
                     </tbody>
-    
                 </table>
             </div>
 
