added function to clear form. Changed read button to show read or notread depending on input

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="input-section">
                     <label for="read">Read</label>
                     <select name="read" id="read-input">
-                        <option value="read">Read</option>
-                        <option value="not-read">Not read</option>
+                        <option value= true>Read</option>
+                        <option value= false>Not read</option>
                     </select>
                 </div>
 
