added eventListener to table and deleteBook() and findBook()

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </select>
                 </div>
 
-                <button id="submit-btn">Submit</button>
+                <button class="submit-btn">Submit</button>
             </form>
 
 
